# zenoh_zephyr_test

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
modules/: modules.cmake
modules/zenoh-pico/: CMakeLists.txt  Kconfig  module.yml
src/: z_sub.c
